574 578 Fix Plan card responsive overlap on Add Locations and Moving center

--- a/src/app/authenticated/plans-and-services/add-services/add-services.component.scss
+++ b/src/app/authenticated/plans-and-services/add-services/add-services.component.scss
@@ -35,9 +35,17 @@
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+  background-color: rgba(239,238,202,1.0);
+  padding-top: 10px;
+
+  
 }
 .start-date-tooltip {
     .fa {
         margin-top : 1em;
     }
 }
+
+.content {
+    background-color: rgba(239,238,202,1.0)
+  }
