--- a/src/app/authenticated/plans-and-services/my-service-plans/my-current-plan/my-current-plan.component.scss
+++ b/src/app/authenticated/plans-and-services/my-service-plans/my-current-plan/my-current-plan.component.scss
@@ -141,7 +141,7 @@
     color:black !important;
   }
   .mat-card-title h2 {
-    font-family: Oswald, "Open Sans", "sans-serif";
+        font-family: 'Oswald', 'Open Sans', 'AvenirNextCondensed-Bold', sans;
     font-size: 24px;
 
   }
@@ -150,7 +150,7 @@
     h2 {
     font-weight: 400;
     color: #000;
-    font-family: Oswald, "Open Sans", "sans-serif";
+        font-family: 'Oswald', 'Open Sans', 'AvenirNextCondensed-Bold', sans;
     font-size: 50px;
 
     }
